deploy/environments/local/redisinsight/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redisinsight
  namespace: redisinsight
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: propertea-gateway
      namespace: kube-system
  hostnames:
    - redisinsight.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: redisinsight
          port: 5540
          weight: 1
